--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Rafael e Guilherme",
   "license": "ISC",
   "dependencies": {
-    "serve": "^14.1.2"
+    "serve": "^14.1.2",
+    "dotenv-safe": "^8.2.0"
   }
 }
