--- a/manifest.json
+++ b/manifest.json
@@ -3,14 +3,20 @@
     "short_name": "PWA-RGSHOP",
     "icons": [
         {
-            "src": "images/pwa-icon-256.png",
+            "src": "images/logo.png",
             "sizes": "256x256",
             "type": "image/png"
         },
         {
-            "src": "images/pwa-icon-512.png",
+            "src": "images/logo.png",
             "sizes": "512x512",
             "type": "image/png"
+        },
+        {
+            "src": "images/logo.png",
+            "sizes": "196x196",
+            "type": "image/png",
+            "purpose": "any maskable"
         }
     ],
     "lang": "pt-BR",
